syntax = "proto3";

option csharp_namespace = "Ds.Base.Grpc.Protos";

package DefaultPackage;

message HeaderMessage
{
	string Header = 1;
}

message ReturnMessage
{
	bool    Status    = 1;
	string  Message   = 2;
	int64   ErrorCode = 3;
}